--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,14 @@
   "name": "__MSG_extName__",
   "description": "__MSG_extDescription__",
   "default_locale": "ja",
-  "version": "1.0",
+  "version": "1.1",
 
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": [
+        "http://*/*",
+	"https://*/*"
+      ],
       "js": ["content_scripts.js"]
     }
   ]
